# linear-regression-sales

./: .gitignore  pyproject.toml
commands/: convert_marimo_to_jupyternb.sh  edit_marimo.sh
notebooks/: M2_AG_Grupo12.ipynb
scripts/: M2_AG_Grupo12.py
