[project]
name = "linear-regression-sales"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "great-tables>=0.17.0",
    "jupyter>=1.1.1",
    "marimo>=0.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "seaborn>=0.13.2",
]
